# Smart-Trading-Platform

./: README.md  lab.ipynb
backend/: main.py
backend/helpers/: security.py  seed.py
genai/: main.py
genai/agents/: __init__.py  bestfit.py  descripe.py
genai/core/: __init__.py  config.py
genai/core/enums/: models.py
genai/core/schemas/: __init__.py  structs.py
genai/store/: __init__.py
genai/store/nlp/prompts/md/: descripe.md
genai/store/vectors/: __init__.py  factory.py  interface.py
genai/store/vectors/providers/: __init__.py  chroma.py  qdrant.py
server/: .env  main.py  pyproject.toml
server/helpers/: config.py  db_conf.py  security.py
server/models/: CarModel.py  OrderItemModel.py  OrderModel.py  UserModel.py  __init__.py
server/routes/: CarRouter.py  OrderRouter.py  UserRouter.py  __init__.py
server/schemas/: CarSchema.py  OrderSchema.py  UserSchema.py
server/services/: CarService.py  OrderService.py  UserService.py
